--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "auth0-js": "^9.7.3",
     "auth0-lock": "^11.9.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "dayjs": "^1.8.0",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
