fixed bundle url for dev staging deployments

--- a/now.json
+++ b/now.json
@@ -33,6 +33,10 @@
       "dest": "/logo.png"
     },
     {
+      "src": "^/app.js",
+      "dest": "/app.js"
+    },
+    {
       "src": ".*",
       "dest": "/index.html"
     }
