--- a/now.json
+++ b/now.json
@@ -33,8 +33,8 @@
       "dest": "/logo.png"
     },
     {
-      "src": "^/app.js",
-      "dest": "/app.js"
+      "src": "^/(.*).js",
+      "dest": "/$1.js"
     },
     {
       "src": ".*",
