Uploaded the latest WIP of cogs red v3 admin & contributor panel for reference

--- a/now.json
+++ b/now.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
   "name": "panel.cogs.red",
-  "builds": [
-    {
-      "src": "now-build.sh",
-      "use": "@now/static-build"
+  "build": {
+    "env": {
+      "VUE_APP_API": "@api-root"
     }
-  ],
+  },
   "routes": [
     {
       "src": "^/js/(.*)",
