--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "panel.cogs.red",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.x"
+  },
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.3",
     "auth0-js": "^9.7.3",
     "auth0-lock": "^11.9.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
